# CodeforcesHaskell

./: README.md
Codeforces.hsproj/: .uuid  Codeforces.cabal  Codeforces.hs  TheatreSquare.hs
Codeforces.hsproj/Problems/: LongWords.hs  TheatreSquare.hs  _TheatreSquare.hsplay
